<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_sound"
    android:orientation="vertical" 
    android:gravity="center">

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:lines="2"
        android:text="@string/ScoreDefautString"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/CMTitleSize"
        android:textStyle="bold" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_gravity="center">
        
        <Button
            android:id="@+id/bScoreRejouer"
            style="@style/button_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScoreRejouer" />
        
        <Button
            android:id="@+id/bScoreRetour"
            style="@style/button_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScoreRetourListe" />

    </LinearLayout>
    
    
</LinearLayout>